# DAWN

./: .gitignore  CMakeLists.txt  CONFIGURE.md  DEVELOPER.md  INSTALL.md  README.md  TESTING.md  dawn-config
.github/workflows/: build.yml
debian/: control  dawn.service  dawn.tmpfiles  generate-changelog.sh  install  postinst  rules  watch
debian/default/: dawn
debian/examples/: dawn.json.example
files/: dawn.config  dawn.init  mac_list  main  main.c
src/: CMakeLists.txt  datastorage.c  datastorage.h  main.c  networksocket.c  networksocket.h  runopts.c  runopts.h  ubus.c  ubus.h  utils.h
src/crypto/: base64.c  crypto.c
src/include/: base64.h  broadcastsocket.h  crypto.h  datastorage.h  dawn_iwinfo.h  dawn_uci.h  ieee80211_utils.h  mac_utils.h  memory_utils.h  msghandler.h  multicastsocket.h  networksocket.h  rssi.h  runopts.h  script.sh  tcpsocket.h  test_storage.h  ubus.h  uface.h  utils.h
src/network/: broadcastsocket.c  multicastsocket.c  networksocket.c  tcpsocket.c
src/storage/: datastorage.c  uface.c
src/test/: kick_deep.script  load_client.script  probe_auto.script  scale_test_A.script  simple_kick.script  storage_test.c  test_header.c  test_storage.c
src/utils/: dawn_iwinfo.c  dawn_uci.c  ieee80211_utils.c  mac_utils.c  memory_utils.c  msghandler.c  rssi.c  runopts.c  ubus.c  utils.c
